# sessionboxbreakout

./: .env  README.md
react-interface/: package-lock.json
react-interface/session-box/: index.html  package-lock.json  package.json
react-interface/session-box/src/: App.tsx  api.ts  index.css
react-interface/session-box/src/components/: BacktestForm.tsx  ResultsTable.tsx  SummaryPanel.tsx
tv_data_fetch/: .gitignore  instrukcja_agenta_kodowego_session_box.docx  main.py  pyproject.toml
tv_data_fetch/session_box/: manage.py
tv_data_fetch/session_box/api_tvData/: apps.py  models.py  urls.py  views.py
tv_data_fetch/session_box/api_tvData/migrations/: 0001_initial.py
tv_data_fetch/session_box/api_tvData/services/: breakout_service.py  session_box_service.py  summary_service.py  tv_data_service.py
tv_data_fetch/session_box/session_box/: asgi.py  settings.py  urls.py  wsgi.py
